# konversation

./: .arcconfig  .arclint  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .kdev_python_header  AUTHORS  AdditionalInfo.txt  CMakeLists.txt  ChangeLog  ConvenienceLibs.cmake  INSTALL  Makefile.am  Messages.sh  NEWS  README  TODO  config-konversation.h.cmake  config-konvi.h.cmake  configure.files  configure.in.in  configure.in.mid  kconfigxt.diff  snapcraft.yaml  update_commit.pl
data/: CMakeLists.txt  Makefile.am  eventsrc  konversation.desktop  konversation.notifyrc  konversation_nicklist_theme.knsrc  konversationui.rc  konvi.desktop  konvi2x  konvirc.protocol  konvirc6.protocol  konvircs.protocol  org.kde.konversation.appdata.xml  org.kde.konversation.desktop  sample.desktop  sample.sh
data/images/: CMakeLists.txt
data/scripts/: CMakeLists.txt  README  bug  cmd  fortune  gauge  kdeversion  mail  media  sayclip  sysinfo  tinyurl  uptime  weather
data/updaters/: konversation-0.19-appearance.pl  konversation-0.19-colorcodes.pl  konversation-0.19-colors.pl  konversation-0.19-custombrowser.pl  konversation-0.19-notifylists.pl  konversation-0.19-tabplacement.pl  konversation-0.20-customfonts.pl  konversation.upd
images/kimproxy/: DELETEME  Makefile.am  README  crsc-action-away.svgz  crsc-action-offline.svgz
images/nickicons/: CMakeLists.txt  Makefile.am
konversation/: Makefile.am  Makefile.in  alias_preferences.ui  channel.cpp  channel.h  channel.moc.cpp  channeldialog.cpp  channeldialog.h  channellistpanel.cpp  channellistpanel.h  channellistviewitem.cpp  channellistviewitem.h  channelnick.cpp  channelnick.h  channeloptionsdialog.cpp  channeloptionsdialog.h  channeloptionsui.ui  chatwindow.cpp  chatwindow.h  chatwindow.moc.cpp  chatwindowappearance_preferences.ui  chatwindowbehaviour_preferences.ui  colorconfiguration.cpp  colorconfiguration.h  colorsappearance_preferences.ui  commit.h  common.cpp  common.h  connection.cpp  connection.h  connectionbehavior_preferences.ui  dcc_preferences.ui  dccchat.cpp  dccchat.h  dccdetaildialog.cpp  dccdetaildialog.h  dccpanel.cpp  dccpanel.h  dccrecipientdialog.cpp  dccrecipientdialog.h  (+287 more)
konversation/compat/: Makefile.am  README_COMPAT  kbufferedsocket.cpp  kbufferedsocket.h  kclientsocketbase.h  kdatagramsocket.cpp  kdatagramsocket.h  kde_file.h  kdelibs_export.h  kdemacros.h  khttpproxysocketdevice.cpp  kiobuffer.h  klistviewsearchline.h  knetworkinterface.h  kresolver.cpp  kresolver.h  kresolver_p.h  kresolvermanager.cpp  kresolverstandardworkers.cpp  kresolverstandardworkers_p.h  kresolverworkerbase.cpp  kresolverworkerbase.h  kreverseresolver.cpp  kreverseresolver.h  kserversocket.cpp  kserversocket.h  ksocketaddress.h  ksocketbase.cpp  ksocketbase.h  ksocketdevice.cpp  ksocketdevice.h  ksockssocketdevice.cpp  ksockssocketdevice.h  kstreamsocket.cpp  kstreamsocket.h  netsupp.cpp  netsupp.h  syssocket.h
konversation/linkaddressbook/: Makefile.am  addressbook.cpp  addressbook.h  addressbook_base.cpp  addressbook_base.h  addresseeitem.cpp  addresseeitem.h  kimiface_fake.h  linkaddressbookui.cpp  linkaddressbookui.h  linkaddressbookui_base.ui  nicklisttooltip.cpp  nicksonlinetooltip.cpp  nicksonlinetooltip.h
konversation/templates/: cpp_template  header_template
src/: CMakeLists.txt  Makefile.am  abstractawaymanager.cpp  abstractawaymanager.h  alias_preferences.cpp  alias_preferences.h  alias_preferencesui.ui  application.cpp  application.h  autoreplace_preferences.cpp  autoreplace_preferences.h  autoreplace_preferencesui.ui  awaymanager.cpp  awaymanager.h  awaymanagerkidletime.cpp  awaymanagerkidletime.h  bookmarkhandler.cpp  bookmarkhandler.h  bookmarkmenu.cpp  channel.cpp  channel.h  channeldialog.cpp  channeldialog.h  channellistpanel.cpp  channellistpanel.h  channellistviewitem.cpp  channellistviewitem.h  channelnick.cpp  channelnick.h  channeloptionsdialog.cpp  channeloptionsdialog.h  channeloptionsui.ui  chatwindow.cpp  chatwindow.h  chatwindowappearance_preferences.ui  chatwindowbehaviour_preferences.ui  cipher.cpp  cipher.h  colorsappearance_preferences.ui  commit.h  (+347 more)
src/blowfish/: BlowfishCbc.cpp  BlowfishCbc.h  Makefile.am  README  README.LICENSE  b64stuff.cpp  b64stuff.h  blowfish.cpp  blowfish.h  custom.diff  mc_blowfish.cpp  mc_blowfish.h  newblowfish.cpp  newblowfish.h  oldblowfish.cpp  oldblowfish1.h  oldblowfish2.h
src/compat/: kbufferedsocket.cpp  kbufferedsocket.h  kclientsocketbase.cpp  kclientsocketbase.h  kdatagramsocket.cpp  khttpproxysocketdevice.h  klistviewsearchline.cpp  kmulticastsocket.h  kmulticastsocketdevice.h  kresolver.h  kresolverstandardworkers_p.h  kresolverworkerbase.h  ksocketaddress.cpp  ksocketaddress.h  ksocketbuffer.cpp  ksocketbuffer_p.h  ksocketdevice.cpp  ksocketdevice.h
src/config/: CMakeLists.txt  Makefile.am  alias_config.cpp  alias_config.h  alias_configui.ui  autoreplace_config.cpp  autoreplace_config.h  autoreplace_configui.ui  chatwindowappearance_config.ui  chatwindowbehaviour_config.ui  colorsappearance_config.cpp  colorsappearance_config.h  colorsappearance_config.ui  configdialog.cpp  configdialog.h  connectionbehavior_config.cpp  connectionbehavior_config.h  connectionbehavior_config.ui  dcc_config.cpp  dcc_config.h  dcc_configui.ui  fontappearance_config.ui  generalbehavior_config.cpp  generalbehavior_config.h  generalbehavior_config.ui  generalbehavior_configui.ui  generalnotifications_config.ui  highlight_config.cpp  highlight_config.h  highlight_configui.ui  highlighttreewidget.cpp  highlighttreewidget.h  ignore_config.cpp  ignore_config.h  ignore_configui.ui  konversation.kcfg  konversation_state.kcfg  konversation_state.kcfgc  launcherentry_config.cpp  launcherentry_config.h  (+33 more)
src/dcc/: chat.cpp  chat.h  chatcontainer.cpp  chatcontainer.h  common.cpp  common.h  dccchat.cpp  dccchat.h  dcccommon.cpp  dcccommon.h  dccfiledialog.cpp  dccfiledialog.h  recipientdialog.cpp  recipientdialog.h  resumedialog.cpp  resumedialog.h  transfer.cpp  transfer.h  transferdetailedinfopanel.cpp  transferpanel.h  (+30 more)
tests/: CMakeLists.txt  testcommon.cpp  testcommon.h
(+458 files in other folders)
